--- a/index.html
+++ b/index.html
@@ -328,6 +328,9 @@
             .noMinHeightGameDiv {
                 min-height: 0 !important;
             }
+            .game-frame {
+                width: 100vw !important;
+            }
         </style>
     </head>
     <body class=body-iframe>
