--- a/index.html
+++ b/index.html
@@ -331,6 +331,10 @@
             .game-frame {
                 width: 100vw !important;
             }
+            div#onetrust-consent-sdk {
+                display: none;
+            }
+
         </style>
     </head>
     <body class=body-iframe>
