--- a/index.html
+++ b/index.html
@@ -330,6 +330,7 @@
             }
             .game-frame {
                 width: 100vw !important;
+                height: 100vh !important;
             }
             div#onetrust-consent-sdk {
                 display: none;
