--- a/index.html
+++ b/index.html
@@ -331,6 +331,10 @@
             .game-frame {
                 width: 100vw !important;
                 height: 100vh !important;
+                margin-top: 0 !important;
+            }
+            #ad-placeholder-vertical, #ad-placeholder-horizontal {
+                display: none !important;
             }
             div#onetrust-consent-sdk {
                 display: none;
