--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <meta name="viewport"
             content="width=device-width,initial-scale=1,shrink-to-fit=no,minimum-scale=1.0,maximum-scale=1.0,user-scalable=no">
         <link rel="canonical" href="https://danadum.github.io/empire">
-        <link rel="shortcut icon" href="http://media.goodgamestudios.com/www/favicon_12.ico" type="image/x-icon">
+        <link rel="shortcut icon" href="//media.goodgamestudios.com/www/favicon_12.ico" type="image/x-icon">
         <title>Goodgame Empire</title>
     </head>
     <body>
