--- a/index.html
+++ b/index.html
@@ -29,8 +29,8 @@
                     response.head.insertAdjacentHTML("beforeend", `
                         <style>
                             #game {
-                                width: 100vw !important;
-                                height: 100vh !important;
+                                width: 100dvw !important;
+                                height: 100dvh !important;
                                 margin-top: 0 !important;
                             }
                             #onetrust-consent-sdk, #ad-placeholder-vertical, #ad-placeholder-horizontal, .fc-ab-root, .fc-whitelist-root {
