--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
                                 height: 100dvh !important;
                                 margin-top: 0 !important;
                             }
-                            #onetrust-consent-sdk, #ad-placeholder-vertical, #ad-placeholder-horizontal, .fc-ab-root, .fc-whitelist-root, .nts-container, .kskdDiv {
+                            #onetrust-consent-sdk, #ad-placeholder-vertical, #ad-placeholder-horizontal, .fc-ab-root, .fc-whitelist-root, .nts-container, .kskdDiv, .videoAdUi {
                                 display: none !important;
                             }
                         </style>
