--- a/index.html
+++ b/index.html
@@ -35,6 +35,8 @@
                             }
                             #onetrust-consent-sdk, #ad-placeholder-vertical, #ad-placeholder-horizontal, .fc-ab-root, .fc-whitelist-root, .nts-container, .kskdDiv, .videoAdUi, .interstitialAdContainer, #didomi-host, ins[id^=gpt_unit_] {
                                 display: none !important;
+				clip-path: inset(100%) !important;
+    				visibility: hidden !important;
                             }
                         </style>
                     `);
