--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <link rel="canonical" href="https://danadum.github.io/empire">
         <link rel="shortcut icon" href="//media.goodgamestudios.com/www/favicon_12.ico" type="image/x-icon">
         <title>Goodgame Empire</title>
-        <link rel="manifest" href="/manifest.webmanifest">
+        <link rel="manifest" href="/empire/manifest.webmanifest">
     </head>
     <body>
         <script>
