--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
                             visibility: hidden !important;
                         }
                     </style>
-                    <link rel="manifest" href="/manifest.webmanifest">
+                    <link rel="manifest" href="/empire/manifest.webmanifest">
                 `);
                 document.documentElement.innerHTML = response.documentElement.innerHTML;
                 for (let script of Array.from(document.scripts)) {
