fix no mobile redirect

--- a/index.html
+++ b/index.html
@@ -20,8 +20,11 @@
     <body>
         <script>
             window.addEventListener('load', async () => {
-                if (!window.location.search.includes('noMobileRedirect') && !window.location.search.includes('nomobileredirect')) {
-                    window.location.href = `${window.location.href.replace(/\/$/, '')}/?noMobileRedirect=true`;
+                if (window.location.search.includes('noMobileRedirect')) {
+                    window.location.href = window.location.href.replace('noMobileRedirect', 'nomobileredirect');
+                }
+                else if (!window.location.search.includes('nomobileredirect')) {
+                    window.location.href = `${window.location.href.replace(/\/$/, '')}/?nomobileredirect=true`;
                 }
                 let response;
                 response = await fetch("https://sheltered-everglades-24913.fly.dev/https://empire.goodgamestudios.com")
